--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # .env
-DISCORD_TOKEN=OTgzOTQ0OTA4MjIwMDE4Njk4.GIJUvE.IkkSRosB29xbupLAWlBcXqf7WIUuecgVh3hoWM
+DISCORD_TOKEN=OTgzOTQ0OTA4MjIwMDE4Njk4.Gi3n03.A-r-O4KR3zy8wwHIq-S880HK-e0TI9G5cyPEb8
